@startuml
title "ERD for Digital Backend"
skinparam dpi 130
skinparam linetype ortho
hide circle

entity "Client" as client {
    *id: number <<PK>>
    --
    *phone: varchar(30)
    *birthday: date
    *contract: varchar(30)
    *status: text enum (ACTIVE, INACTIVE)
    credential: number <<FK>>
    otp_code: varchar(6)
    opt_exp_time: datetime
}

entity "Credential" as cred {
    *id: number <<PK>>
    --
    *password: text
    *salt: text
}

entity "Device" as device {
    *id: number <<PK>>
    --
    *is_active: boolean
    *push_token: text
    *public_key: text
    *device_id: varchar(300)
}

client ||--o{ cred
client ||--o{ device

@enduml